testsuite/poke.pkl/sub-diag-2.pk
/* { dg-do compile } */

var a = 23#B -
        3;  /* { dg-error "invalid operand.*\n.*expected offset" } */
